# siao-cut

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: pr-ci.yml  promote-windows-release.yml  release-windows.yml
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_updates.rs  diagnostics.rs  lib.rs  main.rs
docs/: dependency-security.en.md  dependency-security.md  english-creator-beta-feedback-template.md  english-creator-beta.md  multispeaker-transcription.en.md  multispeaker-transcription.md  release-updates.en.md  release-updates.md  repository-artifact-policy.md  voice-intelligence-0.3.md  windows-candidate-acceptance.en.md  windows-candidate-acceptance.md
release/: runtime-manifest.json
src/: agent_runner.rs  artifacts.rs  audio_analysis.rs  auto_workflow.rs  canvas.rs  cli.mjs  contracts.rs  cuts.rs  db.rs  export.rs  ipc.rs  main.rs  media.rs  model.rs  models.rs  patches.rs  project.rs  runtime.rs  source_import.rs  speaker.rs  speech.rs  subtitle_import.rs  subtitle_quality.rs  subtitle_style.rs  subtitle_workbench.rs  tasks.rs  timeline.rs  transcription.rs  translation.rs  util.rs  video_export.rs  workflows.rs
tests/: cli.test.mjs  core.test.mjs  rust_cli.rs
tools/: build-optional-vulkan-runtime.ps1  build-signed-release.ps1  check-desktop-bundle-size.mjs  check-repository-artifacts.ps1  generate-core-contract.mjs  inspect-pe-subsystem.ps1  install-optional-whisper-runtime.ps1  new-update-manifest.ps1  prepare-release-runtime.ps1  prepare-sidecar.mjs  serve-prototype.mjs  test-installer-retention.ps1  test-local-updater.ps1  test-no-console-windows.ps1  test-real-video-no-console.ps1  test-release-readiness-contract.ps1  test-release-readiness.ps1  test-update-manifest.ps1
tools/updater-contract/: Cargo.toml
tools/updater-contract/src/: main.rs
(+67 files in other folders)
