[package]
name = "siaocut-core"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Local-first Rust + SQLite core for SiaoCut."

[[bin]]
name = "siaocut-core"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bzip2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1.18", features = ["v4"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.23"
