[package]
name = "siaocut-updater-contract"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
serde_json = "1"
sha2 = "0.10"
tauri = { version = "=2.11.5", default-features = false, features = ["test"] }
tauri-plugin-updater = "=2.10.1"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
